--- a/immersion_wall/immersion_wall_individual_tiles_columns/immersion_wall_individual_tiles_columns.css
+++ b/immersion_wall/immersion_wall_individual_tiles_columns/immersion_wall_individual_tiles_columns.css
@@ -1,6 +1,10 @@
 body {
   width: 6824px;
   height: 2240px;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: yellow;
 }
 
 .column {
@@ -10,6 +14,22 @@ body {
 .tile {
   border: 2px solid red;
   background-color: blue;
-  width: 422.5px;
-  height:316px;
+  width: 421px;
+  height: 315px;
+  margin-left: 1px;
+  margin-bottom: 1px;
+}
+
+#column-1 .tile {
+  width: 420px;
+}
+
+#column-2 .tile {
+  border-color: green;
+  background-color: purple;
+}
+
+#column-8 .tile {
+  border-color: green;
+  background-color: orange;
 }
