--- a/art_wall/art_wall_bottom_metadata/art_wall_bottom_metadata.css
+++ b/art_wall/art_wall_bottom_metadata/art_wall_bottom_metadata.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   height: 2304px;
   width: 5760px;
+  font-family: sans-serif;
 }
 
 #content {
@@ -14,11 +15,18 @@ body {
 #metadata {
   width: auto;
   position: absolute;
-  bottom: 50px;
-  right: 50px;
+  bottom: 75px;
+  right: 75px;
   text-align: right;
   background-color: black;
   color: white;
-  padding: 20px;
+  padding: 60px;
+}
+
+#title {
+  font-size: 160px;
+}
+
+#attribution {
   font-size: 100px;
 }
